--- a/templates/includes/public_layout.html
+++ b/templates/includes/public_layout.html
@@ -54,7 +54,7 @@
     </div>
 </nav>
 
-<main style="padding-top: 76px;">
+<main class="public-main">
     <!-- Messages for public pages -->
     {% include 'includes/messages.html' %}
     
