--- a/templates/includes/user_menu.html
+++ b/templates/includes/user_menu.html
@@ -1,5 +1,6 @@
 <!-- templates/includes/user_menu.html -->
 <!-- User Menu Dropdown -->
+{% load static %}
 
 <div class="dropdown">
     <div class="user-menu" data-bs-toggle="dropdown" aria-expanded="false">
@@ -14,7 +15,7 @@
             <div class="user-name">{{ user.get_full_name|default:user.username }}</div>
             <div class="user-role">{{ user_role|default:"User" }}</div>
         </div>
-        <i class="fas fa-chevron-down text-muted" style="font-size: 0.8rem;"></i>
+        <i class="fas fa-chevron-down text-muted user-menu-arrow"></i>
     </div>
     <ul class="dropdown-menu dropdown-menu-end">
         <li><a class="dropdown-item" href="{{ nav_profile_url }}">
